# claude-permissions-hook

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  README.md  RELEASE_NOTES.md  cliff.toml  example-config.kdl
.claude-plugin/: marketplace.json  plugin.json
.config/: nextest.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
hooks/: hooks.json
npm/claude-permissions-hook/: package.json
npm/claude-permissions-hook-darwin-arm64/: package.json
npm/claude-permissions-hook-darwin-x64/: package.json
npm/claude-permissions-hook-linux-arm64/: package.json
npm/claude-permissions-hook-linux-x64/: package.json
review-reports/: claude-permissions-hook-delta-review-20260216-231151.md  claude-permissions-hook-full-review-20260216-225804.md  report-376961e48d4f.md  report-3bc019514684.md  report-3d726d6eb3d8.md  report-423b394045a8.md  report-5183ca22fdb9.md  report-e2a6d8d618f8.md  report-e823b9936498.md  report-f323044e2248.md
src/: error.rs  file_tools.rs  lib.rs  main.rs  path.rs
src/cli/: hook.rs  mod.rs
src/command/: mod.rs
src/config/: bash.rs  document.rs  files.rs  kdl.rs  mod.rs  rule.rs  section.rs
src/decision/: aggregation.rs  bash.rs  files.rs  mod.rs  reason.rs  tests.rs
src/decision_engine/: mod.rs  reason.rs
src/domain/: command_segment.rs  decision.rs  environment.rs  file_operation.rs  file_target.rs  flag.rs  mod.rs  path.rs  permission_decision.rs  policy.rs  (+7 more)
tests/: cli_contract.rs  cli_flows.rs  cli_test.rs  diff_harness.rs  generate_golden.rs
(+70 files in other folders)
