[package]
name = "claude-permissions-hook"
version = "0.1.0"
edition = "2021"
description = "Permission hook for Claude Code with granular rule-based control"
license = "MIT"
repository = "https://github.com/jaisonerick/claude-permissions-hook"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
